projects/editor/components/editor-socket/styles/details.less
@import '@taiga-ui/core/styles/taiga-ui-local.less';

summary {
    position: relative;
    display: flex;
    align-items: center;
    min-block-size: 3.5rem;
    inline-size: 100%;
    box-sizing: border-box;
    border-radius: var(--tui-radius-l);
    outline: none;
    word-break: break-word;
    padding: 0 4.6875rem 0 1.25rem;
    transition: transform var(--tui-duration, 0.3s);
    cursor: pointer;

    &:focus-visible {
        outline: 0.125rem solid var(--tui-text-action);
    }

    p {
        min-inline-size: 0.0625rem;
        margin: 0;
    }

    &::-webkit-details-marker {
        display: none;
    }
}

details[open] summary {
    border-radius: var(--tui-radius-l) var(--tui-radius-l) 0 0;
}

summary::after,
tui-editor & .t-details-arrow {
    content: '';
    position: absolute;
    inset-block-start: 1.5rem;
    inset-inline-end: 1.25rem;
    block-size: 0.575rem;
    inline-size: 0.575rem;
    border: solid var(--tui-text-tertiary);
    border-width: 0 0.125rem 0.125rem 0;
    transform: rotate(45deg);
    appearance: none;
    box-sizing: border-box;
    padding: 0;
    background: none;
    cursor: pointer;
    outline: none;
}

& .t-details-arrow {
    display: none;
}

details:hover summary::after,
.t-details-arrow:hover {
    border-color: var(--tui-text-secondary);
}

.t-details-delete {
    position: absolute;
    inset-block-start: 1.4rem;
    inset-inline-end: 2.7rem;
    block-size: 1.125rem;
    inline-size: 1.25rem;
    appearance: none;
    box-sizing: border-box;
    padding: 0;
    background: none;
    cursor: pointer;
    outline: none;
    border: none;

    &:hover::after {
        color: var(--tui-text-secondary);
    }

    &::after {
        content: '\00d7';
        display: inline-block;
        font-size: 1.5rem;
        color: var(--tui-text-tertiary);
        line-height: 1.125rem;
    }
}

details {
    inline-size: 100%;
    border: 0.0625rem solid var(--tui-border-normal);
    border-radius: var(--tui-radius-l);
    box-sizing: border-box;
}

div[data-type='details-content'] {
    padding: 1.25rem;
    min-block-size: 3rem;
    border: solid var(--tui-border-normal);
    border-width: 0.0625rem 0 0;

    // Prevents extra margin between
    // top border of details and content
    h1:first-child,
    h2:first-child,
    pre:first-child,
    ul:first-child,
    ol:first-child,
    ol li:first-child,
    ul li:first-child {
        margin-block-start: 0;
    }
}

.t-details-wrapper {
    position: relative;
    display: flex;
}

details:not(:last-child) {
    margin-block-end: 1rem;
}

details[open] > summary::after,
details[open] + .t-details-arrow {
    inset-block-start: 1.75rem;
    transform: rotate(225deg);
}

&[tuiTiptapEditor][data-contenteditable='false'] .t-details-delete,
&[tuiTiptapEditor][data-contenteditable='false'] .t-details-arrow {
    display: none;
}

tui-editor & summary,
.t-details-arrow {
    pointer-events: none;
}

details + .t-details-arrow {
    opacity: 0;
}

tui-editor & .t-details-arrow {
    display: block;
    pointer-events: auto;
}

